# computer_club_manager

./: CMakeLists.txt  README.md  logic.cpp  logic.h  main.cpp  test_file.txt  tests.cpp
tests/id 1/test7/: output.txt  test_file.txt
tests/id 1/test9/: output.txt  test_file.txt
tests/id 2/test11/: test_file.txt
tests/id 2/test13/: output.txt
tests/id 3/test14/: test_file.txt
tests/id 3/test15/: output.txt  test_file.txt
tests/id 3/test16/: test_file.txt
tests/id1/test6/: test_file.txt
tests/id1/test8/: output.txt  test_file.txt
tests/id2/test10/: output.txt  test_file.txt
tests/id2/test11/: output.txt
tests/id2/test12/: output.txt  test_file.txt
tests/id2/test13/: test_file.txt
tests/id3/test14/: output.txt
tests/id3/test16/: output.txt
tests/id4/test17/: output.txt  test_file.txt
tests/id4/test18/: output.txt  test_file.txt
tests/parsing/test2/: test_file.txt
tests/parsing/test3/: output.txt  test_file.txt
tests/parsing/test4/: test_file.txt
tests/parsing/test5/: output.txt  test_file.txt
tests/test19/: output.txt  test_file.txt
tests/test20/: output.txt  test_file.txt
tests/test21/: output.txt  test_file.txt
tests/test22/: output.txt
tests/test23/: output.txt  test_file.txt
tests/test24/: output.txt  test_file.txt
tests/test25/: output.txt  test_file.txt
tests/test26/: output.txt
